--- a/admin.css
+++ b/admin.css
@@ -380,7 +380,8 @@ h1 {
   border-collapse: collapse;
 }
 
-#overdue-books-table th, #overdue-books-table td {
+#overdue-books-table th,
+#overdue-books-table td {
   padding: 10px;
   text-align: left;
   border-bottom: 1px solid #ddd;
@@ -401,4 +402,30 @@ h1 {
 
 .sorted-desc::after {
   content: " ▼";
+}
+
+/* badge */
+.badge {
+  display: inline-block;
+  padding: 0.4em 0.8em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+  color: #fff;
+}
+
+.badge-dipinjam {
+  background-color: #007bff; /* Blue */
+}
+
+.badge-terlambat {
+  background-color: #dc3545; /* Red */
+}
+
+.badge-kembali {
+  background-color: #28a745; /* Green */
 }
